유저가 칵테일 좋아요 했는지 여부를 모든 list에서도 확인 가능하게 함
