# backend/src/routes/community.js
@@ -423,6 +423,18 @@ router.get('/list/all', checkTokenYesAndNo, async (req, res) => {
         },
         group: ['PNO'],
       });
+      let isUserLike = false;
+      const isLike =
+        req.user === undefined
+          ? []
+          : await POST_LIKE.findAll({
+              where: { UNO: req.user.UNO, PNO: val.dataValues.PNO },
+            });
+      console.log(isLike);
+      if (isLike.length !== 0) {
+        isUserLike = true;
+      }
+      val.dataValues.isUserLike = isUserLike;
       val.dataValues.cocktailLike = -1; //cocktail관련 게시글이 아닌경우 -1로 초기화
       if (val.CATEGORY === 3) {
         val.dataValues.cocktailLike = val.LIKE;
@@ -438,6 +450,13 @@ router.get('/list/all', checkTokenYesAndNo, async (req, res) => {
         group: ['PNO'],
       });
       console.log('val', val.dataValues.UNO);
+      let isWriter = false;
+      if (req.user.UNO === val.dataValues.UNO) {
+        if (req.user !== undefined) {
+          isWriter = true;
+        }
+      }
+      val.dataValues.isWriter = isWriter;
       delete val.dataValues.UNO;
       val.dataValues.UNO_USER = {
         NICKNAME: user.NICKNAME,
@@ -540,6 +559,25 @@ router.get(
           },
           group: ['PNO'],
         });
+        let isUserLike = false;
+        const isLike =
+          req.user === undefined
+            ? []
+            : await POST_LIKE.findAll({
+                where: { UNO: req.user.UNO, PNO: val.dataValues.PNO },
+              });
+        console.log(isLike);
+        if (isLike.length !== 0) {
+          isUserLike = true;
+        }
+        val.dataValues.isUserLike = isUserLike;
+        let isWriter = false;
+        if (req.user.UNO === val.dataValues.UNO) {
+          if (req.user !== undefined) {
+            isWriter = true;
+          }
+        }
+        val.dataValues.isWriter = isWriter;
         const replyNum = await POST_REPLY.findAll({
           attributes: [
             'PNO',
@@ -651,6 +689,25 @@ router.get('/list/hotPost', checkTokenYesAndNo, async (req, res) => {
       limit: 3, //최대 3개로 조정.
     });
     for (const val of result) {
+      let isWriter = false;
+      if (req.user.UNO === val.dataValues.UNO) {
+        if (req.user !== undefined) {
+          isWriter = true;
+        }
+      }
+      let isUserLike = false;
+      console.log(val);
+      const isLike =
+        req.user === undefined
+          ? []
+          : await POST_LIKE.findAll({
+              where: { UNO: req.user.UNO, PNO: val.dataValues.PNO_POST.PNO },
+            });
+      console.log(isLike);
+      if (isLike.length !== 0) {
+        isUserLike = true;
+      }
+      val.dataValues.isWriter = isWriter;
       const postInfo = val.dataValues.PNO_POST;
       const data = {};
       data['likeCount'] = val.dataValues.likeCount;
@@ -661,6 +718,8 @@ router.get('/list/hotPost', checkTokenYesAndNo, async (req, res) => {
       data['title'] = postInfo.TITLE || null;
       data['createdAt'] = postInfo.createdAt;
       data['content'] = postInfo.CONTENT;
+      data['isWriter'] = isWriter;
+      data['isUserLike'] = isUserLike;
       const replyNum = await POST_REPLY.findAll({
         attributes: [
           'PNO',
